Fixed content going out of the window Added a custom scrollbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -41,6 +41,22 @@ body {
     background-color:   $background-color;
     color:              white;
     font-family:        $font-family;
+
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: $sidebar-color;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: $sidebar-color-hover;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: darken($sidebar-color-hover, 5%);
+    } 
 }
 
 .container {
@@ -211,9 +227,14 @@ body {
             z-index: 100;
 
             position:   fixed;
-            width:      calc(100% - 48px);
+            width:      calc(100% - 15px);
+            height:     100%;
+
+            overflow-y: auto;
+            overflow-x: hidden;
 
             padding-left: $sidebar-width;
+            padding-right: 16px;
 
             -webkit-box-sizing: border-box;
             -moz-box-sizing:    border-box;
@@ -369,6 +390,22 @@ body {
                 -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.75);
                 -moz-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.75);
                 box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.75);
+            }
+        }
+
+        .createLobbyTeamRow {
+            .teamOne {
+                width: 50%;
+                float: left;
+
+                padding-right: 5px;
+            }
+
+            .teamTwo {
+                width: 50%;
+                float:  left;
+
+                padding-left: 5px;
             }
         }
     }
